<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/business"
            android:title="@string/business"
            android:icon="@drawable/ic_business"/>
        <item
            android:id="@+id/crime"
            android:title="@string/crime"
            android:icon="@drawable/ic_crime"/>

        <item
            android:id="@+id/entertainment"
            android:title="@string/entertainment"
            android:icon="@drawable/ic_entertainment"/>

        <item
            android:id="@+id/fashion"
            android:title="@string/fashion"
            android:icon="@drawable/ic_fashion"/>

        <item
            android:id="@+id/finance"
            android:title="@string/finance"
            android:icon="@drawable/ic_finance"/>

        <item
            android:id="@+id/health"
            android:title="@string/health"
            android:icon="@drawable/ic_health"/>

        <item
            android:id="@+id/politics"
            android:title="@string/politics"
            android:icon="@drawable/ic_politics"/>

        <item
            android:id="@+id/sport"
            android:title="@string/sport"
            android:icon="@drawable/ic_sport"/>

        <item
            android:id="@+id/tech"
            android:title="@string/technology"
            android:icon="@drawable/ic_tech"/>
    </group>


</menu>
